force-app/main/default/objects/myV2MOM__Method__c/myV2MOM__Method__c.object-meta.xml
<CustomObject>
    <label>Method</label>
    <nameField>
        <label>Methods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Methods</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>