force-app/main/default/objects/myV2MOM__Method__c/fields/myV2MOM__Description__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>