force-app/main/default/objects/myV2MOM__Method__c/fields/myV2MOM__Order__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>