force-app/main/default/objects/myV2MOM__Method__c/fields/myV2MOM__V2MOM__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__V2MOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>V2MOM</label>
    <referenceTo>myV2MOM__V2MOM__c</referenceTo>
    <relationshipLabel>Methods</relationshipLabel>
    <relationshipName>Methods</relationshipName>
    <type>Lookup</type>
</CustomField>