force-app/main/default/objects/myV2MOM__Method__c/listViews/myV2MOM__All.listView-meta.xml
<ListView>
    <fullName>myV2MOM__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>